<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/gradient_background_uno"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CineProMx">

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="216dp"
        android:layout_height="212dp"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/descarga" />

    <EditText
        android:id="@+id/etUsuario"
        android:layout_width="269dp"
        android:layout_height="49dp"
        android:layout_marginTop="52dp"
        android:drawableStart="@drawable/costum_user_icon"
        android:drawableLeft="@color/colorPrimary"
        android:drawablePadding="6dp"
        android:ems="10"
        android:hint="@string/et1"
        android:inputType="textPersonName"
        android:textSize="18sp"
        android:background="@drawable/costume_input"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton" />

    <EditText
        android:id="@+id/etContrasena"
        android:layout_width="269dp"
        android:layout_height="53dp"
        android:layout_marginStart="68dp"
        android:layout_marginLeft="68dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/costume_input"
        android:drawableStart="@drawable/costume_password_icon"
        android:drawableLeft="@color/colorPrimary"
        android:drawablePadding="6dp"
        android:ems="10"
        android:hint="@string/et2"
        android:inputType="textPassword"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etUsuario" />

    <Button
        android:id="@+id/BotonLogIn"
        android:layout_width="161dp"
        android:layout_height="53dp"
        android:layout_marginTop="96dp"
        android:background="@drawable/costume_buttom_uno"
        android:text="@string/boton1"
        android:textColor="#FFFFFF"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etContrasena" />
</androidx.constraintlayout.widget.ConstraintLayout>